# MopCore547

./: CMakeLists.txt  README.md  TODO.txt  issue_template.md  revision.h.in.cmake
cmake/: showoptions.cmake
dep/: CMakeLists.txt  PackageList.txt
docs/: TODO.md
sql/base/: 2017_06_13_auth.rar  2017_06_13_characters.rar  auth.sql  characters.sql
sql/create/: create_mysql.sql  drop_mysql.sql
sql/updates/characters/: scenarios.sql
sql/updates/world/: 2017_06_12_world_00.sql  2017_06_14_world_00.sql  2017_06_14_world_01.sql  2017_06_14_world_02.sql  2017_06_15_world_00.sql  2017_06_15_world_01.sql  2017_08_29_world_00.sql  2017_09_02_world_00.sql  2017_09_03_world_00.sql  2017_09_03_world_01.sql  2017_09_03_world_02.sql  2017_09_03_world_03.sql  2017_09_04_world_00.sql  2017_09_04_world_01.sql  2017_09_04_world_02.sql  2017_09_04_world_03.sql  2017_09_06_world_00.sql  2017_09_06_world_01.sql  2017_09_10_world_02.sql  2017_09_10_world_03.sql  2017_09_11_world_00.sql  2017_09_11_world_01.sql  2017_09_11_world_02.sql  2017_09_12_world_00.sql  2017_09_12_world_01.sql  2017_09_13_world_00.sql  2017_09_13_world_01.sql  2017_09_14_world_00.sql  2017_09_14_world_01.sql  2017_09_17_world_00.sql  Jadeforest rare spawn creature.sql  Jadeforest rare spawn creature_template.sql  Jadeforest rare spawn creature_text.sql  Kun-lai rares creature.sql  Kun-lai rares creature_template.sql  TownlongSteppes Rare creature_template.sql  TownlongSteppes Rare creature_text.sql  scenarios.sql
src/server/authserver/: CMakeLists.txt  Main.cpp
src/server/game/Maps/: Map.cpp  (+5 more)
src/tools/mmaps_generator/: CMakeLists.txt  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp
(+255 files in other folders)
